fixing spacing for all dashboard widgets

--- a/src/ggrc/assets/stylesheets/_layout.scss
+++ b/src/ggrc/assets/stylesheets/_layout.scss
@@ -111,6 +111,16 @@
   .full-width & {
     margin-left: 40px;
     margin-right: 40px;
+    .side-wrap {
+      .inner-content {
+        margin: 0;
+      }
+    }
+    .content-wrap {
+      .inner-content {
+        margin: 0;
+      }
+    }
   }
 }
 
